# dmv

./: .dockerignore  .gitignore  Dockerfile  SETUP.md  ai_extensions.py  ai_server.py  ai_worker.py  build_push.sh  cfg.py  check_llama_server.sh  check_status_counts.py  config.json  config.yaml  create_sample_ref_master_xlsx.py  create_sim_withholding_data.py  ddl_parser_patch.py  detect_header_fix.py  dmw_web_app.py  docker-compose.yml  entrypoint.sh  extract_dmw_rows.py  final_fix_save_inside_main.py  generate_dmw_artifacts.py  generate_dmw_sample.py  generate_migration_artifacts.py  parse_ddl_v2.py  pyproject.toml  rule1_fix.py  rule3_fix.py  rule4_propagation_fix.py  rule_snippets.txt  run_ui_tests.sh  setup.py  start_all.sh  test_llama.py  tiny_llama_runner.py  ui_app.py  validate_dmw_final.py  validate_dmw_final_main_ai_flags.py  validate_dmw_vs_ddl.py  (+1 more)
ai/: mismatched_fields_ai.json
backup/: validate_dmw_vs_ddl_stream.py
dmw_validator/: __init__.py  _json_utils.py  ai_core.py  ai_extensions.py  ai_extensions_patch.py  ai_precheck.py  cli.py  config.json  ddl_parser.py  extractor.py  llm_runner.py  prompt_profiles.json  prompt_template_strict.py  utils.py  validator.py  viewer.py  xlsx_parser.py
static/: style.css
templates/: base.html  result.html
tests/: run_rules_1_4.sh  test_rule1_local.py  test_rule2_local.py  test_rule3_local.py  test_rule4.py  test_rule4_local.py
tests_auto/: common.py  run_all.py  run_all.sh  test_rule1.py  test_rule2.py  test_rule3.py  test_rule4.py  test_rule5.py  test_rule6.py  test_rule7.py  test_strikethrough.py
(+24 files in other folders)
